--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -204,7 +204,7 @@ shinyApp(ui = ui, server = server)</code></pre>
             <br>
 
             <div class="row">
-                <div class="col s2">
+                <div class="col s12 m2 offset-m1">
                     <div class="collection">
                         <a href="#features_inputs" class="collection-item">Inputs</a>
                         <a href="#features_cards" class="collection-item">Cards</a>
@@ -216,7 +216,7 @@ shinyApp(ui = ui, server = server)</code></pre>
             </div>
             <div class="">
                 <div class="row" id="features_inputs">
-                    <div class="col s10">
+                    <div class="col s10 offset-s1">
                         <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Inputs</h2>
                     </div>
                 </div>
@@ -407,7 +407,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 
 
                 <div class="row" id="features_cards">
-                    <div class="col s10">
+                    <div class="col s10 offset-s1">
                         <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Cards</h2>
                     </div>
                     <div class="row">
@@ -431,7 +431,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                     </div>
                 </div>
                 <div class="row" id="features_depth">
-                    <div class="col s10">
+                    <div class="col s10 offset-s1">
                         <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Depth</h2>
                     </div>
                 </div>
@@ -502,7 +502,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                     </div>
                 </div>
                 <div class="row" id="features_modals">
-                    <div class="col s10">
+                    <div class="col s10 offset-s1">
                         <h2 class='my-code' style='font-size:75px;color:black;font-weight:500;font-weight:500'>Modals</h2>
                     </div>
                 </div>
@@ -540,7 +540,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 
                 </div>
                 <div class="row" id="features_parallax">
-                    <div class="col s10">
+                    <div class="col s10 offset-s1">
                         <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Parallax</h2>
                     </div>
                 </div>
