--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -205,6 +205,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 
             <div class="row">
                 <div class="col s12 m2 offset-m1">
+                    <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>Features</h1>
                     <div class="collection">
                         <a href="#features_inputs" class="collection-item">Inputs</a>
                         <a href="#features_cards" class="collection-item">Cards</a>
@@ -217,7 +218,7 @@ shinyApp(ui = ui, server = server)</code></pre>
             <div class="">
                 <div class="row" id="features_inputs">
                     <div class="col s10 offset-s1">
-                        <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Inputs</h2>
+                        <h2 class='my-code' style='font-size:60px;color:black;font-weight:500'>Inputs</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -408,7 +409,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 
                 <div class="row" id="features_cards">
                     <div class="col s10 offset-s1">
-                        <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Cards</h2>
+                        <h2 class='my-code' style='font-size:60px;color:black;font-weight:500'>Cards</h2>
                     </div>
                     <div class="row">
                         <div class="col s12 m6 offset-m1">
@@ -432,7 +433,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 </div>
                 <div class="row" id="features_depth">
                     <div class="col s10 offset-s1">
-                        <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Depth</h2>
+                        <h2 class='my-code' style='font-size:60px;color:black;font-weight:500'>Depth</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -503,7 +504,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 </div>
                 <div class="row" id="features_modals">
                     <div class="col s10 offset-s1">
-                        <h2 class='my-code' style='font-size:75px;color:black;font-weight:500;font-weight:500'>Modals</h2>
+                        <h2 class='my-code' style='font-size:60px;color:black;font-weight:500;font-weight:500'>Modals</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -541,7 +542,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 </div>
                 <div class="row" id="features_parallax">
                     <div class="col s10 offset-s1">
-                        <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Parallax</h2>
+                        <h2 class='my-code' style='font-size:60px;color:black;font-weight:500'>Parallax</h2>
                     </div>
                 </div>
                 <div class="row">
