--- a/shinymaterial/gmail_clone_mobile/index.html
+++ b/shinymaterial/gmail_clone_mobile/index.html
@@ -26,13 +26,13 @@
             350px by 650px
 
             <h5>
-                <br>the original app is hosted <a href="https://ericrayanderson.shinyapps.io/gmail_clone/">here</a>
+                <br>the original app is hosted <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=gmail_clone">here</a>
             </h5>
             if you are viewing this page on mobile, go to the link
         </div>
         <div class="col s12 m8 offset-m1">
             <br>
-            <iframe src="https://ericrayanderson.shinyapps.io/gmail_clone/" width=350 height=650></iframe>
+            <iframe src="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=gmail_clone" width=350 height=650></iframe>
         </div>
     </div>
 </body>
