--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -580,7 +580,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 <br>
                 <br>
                 <div class="collection">
-                    <a href="https://ericrayanderson.shinyapps.io/shinymaterial_basic/" target="_blank" class="collection-item">Example App</a>
+                    <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=example_app" target="_blank" class="collection-item">Example App</a>
                     <a href="gmail_clone_mobile/" target="_blank" class="collection-item">Gmail clone</a>
                 </div>
             </div>
