--- a/shinymaterial/gmail_clone_mobile/index.html
+++ b/shinymaterial/gmail_clone_mobile/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col s12 m8 offset-m1">
             <br>
-            <iframe src="https://ericrayanderson.shinyapps.io/gmail_clone/" width=350 height=650></iframe>
+            <iframe src="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=gmail_clone" width=350 height=650></iframe>
         </div>
     </div>
 </body>
