--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -542,7 +542,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 </div>
                 <div class="row" id="features_parallax">
                     <div class="col s10 offset-s1">
-                        <h2 class='my-code' style='font-size:px;color:black;font-weight:500'>Parallax</h2>
+                        <h2 class='my-code' style='font-size:60px;color:black;font-weight:500'>Parallax</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -580,7 +580,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 <br>
                 <br>
                 <div class="collection">
-                    <a href="https://ericrayanderson.shinyapps.io/shinymaterial_basic/" target="_blank" class="collection-item">Example App</a>
+                    <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=example_app" target="_blank" class="collection-item">Example App</a>
                     <a href="gmail_clone_mobile/" target="_blank" class="collection-item">Gmail clone</a>
                 </div>
             </div>
