--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -597,11 +597,44 @@ shinyApp(ui = ui, server = server)</code></pre>
                 <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>CRAN</h1>
 
 
+
+
+
+
+
+
+
+                <ul class="collection">
+                    <li class="collection-item">
+                        <h5>Version</h5>0.3.0</li>
+                    <li class="collection-item">
+                        <h5>Date</h5>07.04.2017</li>
+                    <li class="collection-item">
+                        <h5>New Functions</h5>
+                        None
+                    </li>
+                    <li class="collection-item">
+                        <h5>Function Updates</h5>
+                        Various bug fixes
+                    </li>
+                    <li class="collection-item">
+                        <h5>Materialize</h5>v0.99.0</li>
+                </ul>
+
+
+
+
+
+
+
+
+
+
                 <ul class="collection">
                     <li class="collection-item">
                         <h5>Version</h5>0.2.1</li>
                     <li class="collection-item">
-                        <h5>Date</h5>04.29.2016</li>
+                        <h5>Date</h5>04.29.2017</li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
                         <div class='my-code'>
@@ -638,7 +671,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <li class="collection-item">
                         <h5>Version</h5>0.1.0</li>
                     <li class="collection-item">
-                        <h5>Date</h5>04.15.2016</li>
+                        <h5>Date</h5>04.15.2017</li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
                         <div class='my-code'>
@@ -669,7 +702,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <h5>Function Updates</h5>None
                     </li>
                     <li class="collection-item">
-                        <h5>Materialize</h5>v0.98.2</li>
+                        <h5>Materialize</h5>v0.99.0</li>
                 </ul>
             </div>
         </div>
