--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -696,7 +696,9 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <li class="collection-item">
                         <h5>Date</h5>Ongoing</li>
                     <li class="collection-item">
-                        <h5>New Functions</h5>None
+                        <h5>New Functions</h5>
+                        <div class='my-code'>
+                            material_date_picker()</div>
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>None
