--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -255,7 +255,8 @@ shinyApp(ui = ui, server = server)</code></pre>
 
 
                         <br/>
-                        <input type="date" class="datepicker">
+                        <label for="example_date_picker">Date Picker</label>
+                        <input id="example_date_picker" type="date" class="datepicker">
                     </div>
                     <div class="col s12 m2 offset-m1">
                         <br/>
