--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -5,7 +5,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
 
     <!--Let browser know website is optimized for mobile-->
@@ -709,7 +709,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <h5>Function Updates</h5>None
                     </li>
                     <li class="collection-item">
-                        <h5>Materialize</h5>v0.99.0</li>
+                        <h5>Materialize</h5>0.100.2</li>
                 </ul>
             </div>
         </div>
@@ -717,7 +717,7 @@ shinyApp(ui = ui, server = server)</code></pre>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="highlight_r/highlight.pack.js"></script>
     <script>
         $(document).ready(function() {
