--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -709,7 +709,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <h5>Function Updates</h5>None
                     </li>
                     <li class="collection-item">
-                        <h5>Materialize</h5>0.100.2</li>
+                        <h5>Materialize</h5>v0.100.2</li>
                 </ul>
             </div>
         </div>
