--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -604,7 +604,26 @@ shinyApp(ui = ui, server = server)</code></pre>
 
 
 
-
+                <ul class="collection">
+                    <li class="collection-item">
+                        <h5>Version</h5>0.4.0</li>
+                    <li class="collection-item">
+                        <h5>Date</h5>10.28.2017</li>
+                    <li class="collection-item">
+                        <h5>New Functions</h5>
+                        material_side_nav_tabs() <br> material_side_nav_tab_content() <br> material_checkbox()
+                    </li>
+                    <li class="collection-item">
+                        <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
+                        <div class='my-code'>material_page()</div>
+                        <div class='my-code-black'>
+                            font_color
+                        </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Materialize</h5>v0.100.2</li>
+                </ul>
 
 
 
