--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -611,7 +611,9 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <h5>Date</h5>10.28.2017</li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
-                        material_side_nav_tabs() <br> material_side_nav_tab_content() <br> material_checkbox()
+                        <div class='my-code'>
+                            material_side_nav_tabs() <br> material_side_nav_tab_content() <br> material_date_picker()
+                        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>
