--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -723,8 +723,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <h5>Date</h5>Ongoing</li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
-                        <div class='my-code'>
-                            material_date_picker()</div>
+                        None
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>None
