--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -189,7 +189,8 @@ shinyApp(ui = ui, server = server)
 
                 <div id="basic_side_nav_tabs">
                     <h2><span class='myh2'>Basic </span>+ Side-Nav + Tabs</h2>
-                    <pre><code class='r'>library(shiny)
+                    <pre><code class='r'>
+                    library(shiny)
 library(shinymaterial)
 
 # Wrap shinymaterial apps in material_page
