--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -167,6 +167,9 @@ shinyApp(ui = ui, server = server)
                     <div class='z-depth-3'>
                         <img src="img/basic_side_nav_tabs.png" width="100%">
                     </div>
+                    <div class='z-depth-3'>
+                        <img src="img/basic_side_nav_tabs.png" width="100%">
+                    </div>
                     <h5>clicking on
                         <div style='display:inline'><img src="img/menu.png" height="30" width="30"></div>
                     </h5>
