--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -165,13 +165,8 @@ server <- function(input, output) {
 shinyApp(ui = ui, server = server)
 </code></pre>
                     <div class='z-depth-3'>
-                        <img src="img/basic_side_nav_tabs.png" width="100%">
+                        <img src="img/basic_side_nav_with_tabs.png" width="100%">
                     </div>
-                    <h5>clicking on
-                        <div style='display:inline'><img src="img/menu.png" height="30" width="30"></div>
-                    </h5>
-                    <div class='z-depth-3'>
-                        <img src="img/basic_side_nav_tabs_out.png" width="100%"> </div>
 
                     <br>
                     <br>
