--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -129,8 +129,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 
                 <div id="basic_side_nav_with_tabs">
                     <h2><span class='myh2'>Basic </span>+ Side-Nav with Tabs</h2>
-                    <pre><code class='r'>
-library(shiny)
+                    <pre><code class='r'>library(shiny)
 library(shinymaterial)
 
 # Wrap shinymaterial apps in material_page
@@ -184,8 +183,7 @@ shinyApp(ui = ui, server = server)
 
                 <div id="basic_side_nav_tabs">
                     <h2><span class='myh2'>Basic </span>+ Side-Nav + Tabs</h2>
-                    <pre><code class='r'>
-                    library(shiny)
+                    <pre><code class='r'>library(shiny)
 library(shinymaterial)
 
 # Wrap shinymaterial apps in material_page
