--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -143,6 +143,7 @@ ui <- material_page(
   # Place side-nav in the beginning of the UI
   material_side_nav(
     fixed = TRUE,
+    # Place side-nav tabs within side-nav
     material_side_nav_tabs(
       side_nav_tabs = c(
         "Example Side-Nav Tab 1" = "example_side_nav_tab_1",
