--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -653,7 +653,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 <br>
                 <div class="collection">
                     <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=example_app" target="_blank" class="collection-item">Example App</a>
-                    <a href="gmail_clone_mobile/" target="_blank" class="collection-item">Gmail clone</a>
+                    <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=gmail_clone" target="_blank" class="collection-item">Gmail clone</a>
                 </div>
             </div>
             <div class="col s10 m4 offset-m2">
