--- a/shinymaterial4/index.html
+++ b/shinymaterial4/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <script>
-        window.location = "https://github.com/ericrayanderson/shinymaterial"
+        window.location = "https://ericrayanderson.github.io/shinymaterial/"
 
     </script>
 </body>
