--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -69,14 +69,14 @@
     </ul>
     <div class="col s12" id="about">
         <div class="row">
-            <div class="col s10 offset-s1">
+            <div class="col s8 offset-s2">
                 <br/>
 
                 <h4>
                     <span class='my-code' style='font-weight:600; color:#e57373 '>shinymaterial</span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h4>
                 <br/>
                 <div class="center-align">
-                    <img height="100%" width="100%" src="https://i.ytimg.com/vi/rrT6v5sOwJg/maxresdefault.jpg" />
+                    <img width="100%" src="https://i.ytimg.com/vi/rrT6v5sOwJg/maxresdefault.jpg" />
                 </div>
             </div>
         </div>
