--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -41,8 +41,8 @@
 
 <body class="grey lighten-4">
     <nav>
-        <div class="nav-wrapper">
-            <div href="javascript:void(0)" class="brand-logo">&nbsp;shinymaterial</div>
+        <div class="nav-wrapper teal">
+            <div href="javascript:void(0)" class="brand-logo">&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial v0.4.1</a></div>
             <div href="javascript:void(0)" class="brand-logo right">
                 <a href="https://github.com/ericrayanderson/shinymaterial" target="_blank">
                     <img style=' color: white' src='img/GitHub-Mark-Light-32px.png'>&nbsp;
@@ -72,8 +72,8 @@
             <div class="col s8 offset-s2">
                 <br/>
 
-                <h4>
-                    <span class='my-code' style='font-weight:600; color:#e57373 '>shinymaterial</span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h4>
+                <h4 style="line-height:145%">
+                    <span class='my-code' style='font-weight:600; color:#e57373 '><a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h4>
                 <br/>
                 <div class="center-align">
                     <img width="100%" src="https://i.ytimg.com/vi/rrT6v5sOwJg/maxresdefault.jpg" />
