--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -89,11 +89,16 @@
             <div class="col s8 offset-s2">
                 <br/>
 
-                <h4 style="line-height:145%">
-                    <span class='my-code' style='font-weight:600; color:#e57373 '><a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h4>
-                <br/>
-                <div class="center-align">
-                    <img width="100%" src="https://i.ytimg.com/vi/rrT6v5sOwJg/maxresdefault.jpg" />
+                <div class="card">
+                    <div class="card-content">
+                        <h4 style="line-height:145%">
+                            <span class='my-code' style='color:#e57373 '><a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h4>
+
+                        <br/>
+                        <div class="center-align">
+                            <img width="100%" src="https://i.ytimg.com/vi/rrT6v5sOwJg/maxresdefault.jpg" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
