--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -668,21 +668,25 @@ shinyApp(ui = ui, server = server)</code></pre>
     <div class="col s12" id="showcase">
         <br>
         <div class="row">
-            <div class="col col s10 m4 offset-m1">
-                <h3 class='my-code' style='font-size:75px;color:black;font-weight:500'>Examples</h3>
-                <br>
-                <br>
-                <div class="collection">
-                    <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=example_app" target="_blank" class="collection-item">Example App</a>
-                    <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=gmail_clone" target="_blank" class="collection-item">Gmail Clone</a>
+            <div class="col s5 offset-s1">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title teal-text">Example App</span>
+                        <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=example_app" target="_blank"><img src="img/example_app.png" width="100%"></a>
+                    </div>
                 </div>
             </div>
-            <div class="col s10 m4 offset-m2">
-                <br><br><br>
-                <a class="z-depth-3 waves-effect waves-light btn-large" href="mailto:eric.ray.anderson@gmail.com?subject=shinymaterial submission">Submit To Showcase</a>
+            <div class="col s5">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title teal-text">Gmail Clone</span>
+                        <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=gmail_clone" target="_blank"><img src="img/gmail_clone.png" width="100%"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
     <div class="col s12" id="releases">
         <div class="row">
             <br>
